# GEM-X

./: .gitignore  .gitmodules  ATTRIBUTIONS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: lint.yml
configs/: demo.yaml  demo_soma.yaml  train.yaml
configs/callbacks/metric/: metric_metrosim_both.yaml
configs/diffusion/: ddim.yaml
configs/endecoder/: v2_soma_local_cam.yaml
configs/exp/: gem_soma_regression.yaml
configs/test_datasets/: metrosim_dh_val.yaml  metrosim_dh_val_transl_clean.yaml
configs/train_datasets/: metrosim_dh_mocap.yaml  metrosim_dh_mocap_train.yaml  metrosim_dh_train.yaml  metrosim_dh_train_hb.yaml
docs/: DEMO.md  INSTALL.md  MODEL_OVERVIEW.md  RELATED_PROJECTS.md  TRAINING.md
gem/: gem.py
gem/callbacks/metric/: metric_metrosim_both.py
gem/datasets/metrosim/: cam_traj_utils.py  metrosim.py  metrosim_mocap.py
gem/diffusion_utils/: gaussian_diffusion.py
gem/network/: endecoder.py  gem_denoiser.py  gem_diffusion.py  stats_compose.py
gem/pipeline/: gem_pipeline.py
gem/utils/: ckpt_compat.py  eval_utils.py  geo_transform.py  hf_utils.py  kp2d_utils.py  motion_utils.py  rotation_conversions.py  sam3db_extractor.py  seq_utils.py  soma_augment.py  tools.py  vitpose_extractor.py
gem/utils/soma_utils/: __init__.py  soma_layer.py
gem/utils/vis/: cv2_utils.py  pyrender_incam.py  renderer.py  renderer_tools.py  renderer_utils.py
scripts/: install_env.sh  slurm_init.sh  train.py
scripts/demo/: demo_2d_keypoints.py  demo_soma.py  demo_soma_headless.py
