[metadata]
name = gem
version = 0.1.0
description = GEM: A Generalist Model for Human Motion
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.10
install_requires =
    torch
    torchvision
    timm==0.6.7
    lightning
    hydra-core==1.3
    hydra-colorlog
    rich
    numpy==1.23.5
    setuptools
    opencv-python
    ffmpeg-python
    einops
    imageio==2.34.1
    av<14
    tqdm
    scipy
    pillow
    transformers
    open3d
    wandb
    huggingface_hub

[options.extras_require]
train =
    tensorboardX
    trimesh
dev =
    pytest
    ruff
    pre-commit
    black

[options.packages.find]
include =
    gem
    gem.*
    tools
